<resources>
    <string name="app_name">Career Light</string>
    <string name="Calendar">Calendar</string>
    <string name="Chat">Chat</string>
    <string name="Workshop">Workshop</string>
    <string name="Resource">Resource</string>
    <string name="Courses">Courses</string>
    <string name="Setting">Setting</string>
<<<<<<< HEAD
    <string name="login">Login</string>
    <string name="create_a_new_account">Create an Account</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="already_have_account">Already have account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>




    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>

=======
>>>>>>> 40fa73eef59e8d5ad71325fd957bceb7bbe6f47f
</resources>
